--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "private": true,
     "dependencies": {
-    "express": "4.15.3"
+        "express": "4.15.3",
+        "nodemon": "1.11.0"
     }
 }
