--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,5 @@ services:
     ports:
          - "3000:3000"
     volumes:
-        - ".:/app"
+          - ".:/app"
+          - "/etc/localtime:/etc/localtime:ro"
